--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 
                 <div class="hero-image-wrapper" data-aos="zoom-in" data-aos-duration="1200">
                     <div class="image-container">
-                        <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?auto=format&fit=crop&q=80&w=1000" alt="Fresh organic vegetables" class="hero-img">
+                        <picture>
+                            <source media="(max-width: 768px)" srcset="https://images.unsplash.com/photo-1566385101042-1a000c1267c4?auto=format&fit=crop&q=80&w=800">
+                            <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?auto=format&fit=crop&q=80&w=1000" alt="Fresh organic vegetables" class="hero-img">
+                        </picture>
                         <div class="floating-card" data-aos="fade-up" data-aos-delay="500">
                             <div class="card-icon">
                                 <i data-lucide="leaf"></i>
@@ -389,6 +392,7 @@
     let currentIndex = 0;
 
     function selectFile(index) {
+        if (!fileItems[index]) return;
         fileItems.forEach(item => item.classList.remove('active'));
         windows.forEach(win => win.classList.remove('active'));
         fileItems[index].classList.add('active');
